# sauos-aient

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  web.py
docs/: 商务介绍.md  技术方案书.md  技术栈.txt  项目介绍_多语言.md
examples/: __init__.py  ai_demo.py  demo.py
sauos/: __init__.py  __main__.py  automation.py  scheduler.py
sauos/ai/: __init__.py  agent.py  config.py  llm.py  vision.py
sauos/core/: __init__.py  image.py  keyboard.py  mouse.py  screen.py  window.py
website/: index.html
